html layout draft

--- a/pages/index.html
+++ b/pages/index.html
@@ -1,3 +1,30 @@
+<!-- Main page (Comments page) -->
+
 <head>
     <title>TITLE test</title>
+    <!-- <script src="../scripts/loadTemplates.js"></script> -->
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" type="text/css" href="../style/style.css">
 </head>
+<body id="page-body">
+    <div class="outer-wrap">
+        <header id="title" class="title">
+            <!-- Should be in another file -->
+            <p>test</p>
+            <p>test</p>
+        </header>
+
+        <div class="wrap">
+            <div class="wrap-inner">
+                <p>wrap-inner</p>
+            </div>
+        </div>
+    </div>
+
+    <footer id="footer" class="footer">
+        <!-- Should be in another file -->
+        <p>footer</p>
+    </footer>
+</body>
