--- a/pages/landing.html
+++ b/pages/landing.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" type="text/css" href="../style/style.css">
+    <link rel="stylesheet" type="text/css" href="../style/landing.css">
 </head>
 <body id="page-body">
     <div class="landing-background">
