--- a/pages/index.html
+++ b/pages/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" type="text/css" href="../style/style.css">
+    <link rel="stylesheet" type="text/css" href="../style/index.css">
 </head>
 <body id="page-body">
     <div class="outer-wrap">
