--- a/pages/index.html
+++ b/pages/index.html
@@ -33,9 +33,7 @@
 
     <div class="outer-wrap">
         <header id="title" class="title">
-            <!-- Should be in another file -->
-            <p>test</p>
-            <p>test</p>
+            <include src="templates/header.html"></include>
         </header>
 
         <div class="wrap">
@@ -111,7 +109,6 @@
     </div>
 
     <footer id="footer" class="footer">
-        <!-- Should be in another file -->
-        <p>footer</p>
+        <include src="templates/footer.html"></include>
     </footer>
 </body>
