--- a/pages/index.html
+++ b/pages/index.html
@@ -12,9 +12,7 @@
 </head>
 <body id="page-body">
     <div class="outer-wrap">
-        <header id="title" class="title">
-            <include src="templates/header.html"></include>
-        </header>
+        <header id="title" class="title"></header>
 
         <div class="wrap">
             <div class="wrap-inner">
@@ -88,7 +86,5 @@
         </div>
     </div>
 
-    <footer id="footer" class="footer">
-        <include src="templates/footer.html"></include>
-    </footer>
+    <footer id="footer" class="footer"></footer>
 </body>
