--- a/pages/register.html
+++ b/pages/register.html
@@ -11,11 +11,7 @@
 </head>
 <body id="page-body">
     <div class="outer-wrap">
-        <header id="title" class="title">
-            <!-- Should be in another file -->
-            <p>test</p>
-            <p>test</p>
-        </header>
+        <header id="title" class="title"></header>
 
         <div class="wrap">
             <div class="wrap-inner">
@@ -30,8 +26,5 @@
         </div>
     </div>
 
-    <footer id="footer" class="footer">
-        <!-- Should be in another file -->
-        <p>footer</p>
-    </footer>
+    <footer id="footer" class="footer"></footer>
 </body>
