--- a/pages/index.html
+++ b/pages/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>TITLE test</title>
 
-    <!-- <script src="../scripts/loadTemplates.js"></script> -->
+    <script src="../scripts/loadTemplates.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -12,7 +12,9 @@
 </head>
 <body id="page-body">
     <div class="outer-wrap">
-        <header id="title" class="title"></header>
+        <header id="title" class="title">
+            <p>test</p>
+        </header>
 
         <div class="wrap">
             <div class="wrap-inner">
@@ -86,5 +88,7 @@
         </div>
     </div>
 
-    <footer id="footer" class="footer"></footer>
+    <footer id="footer" class="footer">
+        <p>test</p>
+    </footer>
 </body>
