--- a/pages/index.html
+++ b/pages/index.html
@@ -10,9 +10,7 @@
 </head>
 <body id="page-body">
     <div class="outer-wrap">
-        <header id="title" class="title">
-            <p>test</p>
-        </header>
+        <header id="title" class="title"></header>
 
         <div class="wrap">
             <div class="wrap-inner">
@@ -86,9 +84,7 @@
         </div>
     </div>
 
-    <footer id="footer" class="footer">
-        <p>test</p>
-    </footer>
+    <footer id="footer" class="footer"></footer>
 </body>
 
 <script src="../scripts/loadTemplates.js"></script>
