--- a/pages/index.html
+++ b/pages/index.html
@@ -1,7 +1,8 @@
 <!-- Main page (Comments page) -->
 
 <head>
-    <title>TITLE test</title>
+    <title>INFINITY</title>
+    <meta name="description" content="인피니티에 오신 것을 환영합니다.">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
