title desc changed

--- a/pages/register.html
+++ b/pages/register.html
@@ -1,8 +1,8 @@
 <!-- Main page (Comments page) -->
 
 <head>
-    <title>TITLE test</title>
-    <!-- <script src="../scripts/loadTemplates.js"></script> -->
+    <title>SIGN UP</title>
+    <meta name="description" content="회원이 되어주셔서 감사드립니다.">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
