--- a/pages/userprofile.html
+++ b/pages/userprofile.html
@@ -1,5 +1,6 @@
 <head>
-    <title>TITLE test</title>
+    <title>유저 이름</title>
+    <meta name="description" content="유저 아이디">
     <!-- <script src="../scripts/loadTemplates.js"></script> -->
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
