--- a/pages/viewpost.html
+++ b/pages/viewpost.html
@@ -1,6 +1,6 @@
 <head>
-    <title>TITLE test</title>
-    <!-- <script src="../scripts/loadTemplates.js"></script> -->
+    <title>글 제목</title>
+    <meta name="description" content="작성자">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
