--- a/pages/login.html
+++ b/pages/login.html
@@ -1,8 +1,8 @@
 <!-- Main page (Comments page) -->
 
 <head>
-    <title>TITLE test</title>
-    <!-- <script src="../scripts/loadTemplates.js"></script> -->
+    <title>LOGIN</title>
+    <meta name="description" content="로그인 방법을 선택하세요.">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
