--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" type="text/css" href="../style/style.css">
+    <link rel="stylesheet" type="text/css" href="style/style.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>    
-    <script src="../scripts/init.js"></script>
+    <script src="scripts/init.js"></script>
 </head>
 
 <body id="page-body">
