--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>    
     <script src="scripts/init.js"></script>
+    <script src="scripts/script.js"></script>
 </head>
 
 <body id="page-body">
@@ -17,6 +18,25 @@
     <div class="outer-wrap">
 
         <header id="title" class="title"></header>
+
+        <!-- TEMP - 개발용 임시 버튼입니다. -->
+
+        <div id="devbuttons">
+            <h3>DEVELOPERS ONLY</h3>
+            <button onclick="loadNewsfeed()">NEWS FEED</button>
+            <button onclick="loadLogin()">LOGIN</button>
+            <button onclick="loadLostAccount()">LOST ACCOUNT</button>
+            <button onclick="loadMyProfile()">MY PROFILE</button>
+            <button onclick="loadRegister()">REGISTER</button>
+            <button onclick="loadTitle()">TITLE</button>
+            <button onclick="loadUserProfile()">OTHER USER's PROFILE</button>
+            <button onclick="loadViewPost()">VIEW POST</button>
+            <button onclick="loadWritePost()">WRITE POST</button>
+            <button onclick="hideDevButtons()">HIDE BUTTONS</button>
+        </div>
+
+        <!-- TEMP - 개발용 임시 버튼입니다. -->
+
 
         <div class="wrap">
             <div class="wrap-inner">
