--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 </head>
 
 <body id="page-body">
+    <body>
+        <div id="root"></div>
+        <script src="js/main.js" type="module"></script>
+    </body>
     
     <div class="outer-wrap">
 
