--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" type="text/css" href="style/style.css">
+    <link rel="stylesheet" type="text/css" href="style/login.css">
+    <link rel="stylesheet" type="text/css" href="style/lostaccount.css">
+    <link rel="stylesheet" type="text/css" href="style/myprofile.css">
+    <link rel="stylesheet" type="text/css" href="style/newsfeed.css">
+    <link rel="stylesheet" type="text/css" href="style/register.css">
+    <link rel="stylesheet" type="text/css" href="style/userprofile.css">
+    <link rel="stylesheet" type="text/css" href="style/viewpost.css">
+    <link rel="stylesheet" type="text/css" href="style/writepost.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>    
     <script src="scripts/init.js"></script>
