--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>    
     <script src="scripts/init.js"></script>
     <script src="scripts/script.js"></script>
+    <script src="scripts/firebase.js"></script>
 </head>
 
 <body id="page-body">
