--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             <button onclick="loadViewPost()">VIEW POST</button>
             <button onclick="loadWritePost()">WRITE POST</button>
             <button onclick="hideDevButtons()">HIDE BUTTONS</button>
+            <button onclick="loadLandingPage()">GO TO LANDING PAGE</button>
         </div>
 
         <!-- TEMP - 개발용 임시 버튼입니다. -->
