--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!-- Main page (Comments page) -->
+<script src="goToLandingPage.js"></script>
 
 <head>
     <title>INFINITY</title>
@@ -24,7 +25,7 @@
 <body id="page-body">
     <body>
         <div id="root"></div>
-        <script src="js/main.js" type="module"></script>
+        <script src="scripts/main.js" type="module"></script>
     </body>
     
     <div class="outer-wrap">
