--- a/pages/landing.html
+++ b/pages/landing.html
@@ -35,5 +35,6 @@
         <h1>커뮤니티에 오신 것을 환영합니다.</h1>
         <button>회원가입</button>
         <button>로그인</button>
+        <button onclick="skipLogin()">SKIP LOG IN</button>
     </div>
 </body>
