--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>INFINITY</title>
     <meta name="description" content="인피니티에 오신 것을 환영합니다.">
 
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" type="text/css" href="style/style.css">
