--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- Main page (Comments page) -->
-<script src="goToLandingPage.js"></script>
+<script src="scripts/goToLandingPage.js" type="module"></script>
 
 <head>
     <title>INFINITY</title>
@@ -47,6 +47,7 @@
             <button onclick="loadWritePost()">WRITE POST</button>
             <button onclick="hideDevButtons()">HIDE BUTTONS</button>
             <button onclick="loadLandingPage()">GO TO LANDING PAGE</button>
+            <button onclick="addTestPost()">ADD TEST POST</button>
         </div>
 
         <!-- TEMP - 개발용 임시 버튼입니다. -->
