--- a/pages/landing.html
+++ b/pages/landing.html
@@ -34,7 +34,7 @@
     <!-- 배경 동영상 태그 -->
 
     <div class="landing-background">
-        <h1>커뮤니티에 오신 것을 환영합니다.</h1>
+        <h1>Welcome To Our Dream!</h1>
         <button>회원가입</button>
         <button>로그인</button>
         <button onclick="skipLogin()">SKIP LOG IN</button>
