landingpage <-> newsfeed, login, register 구현 비로그인 사용자 랜딩으로 보냄 SKIP LOGIN 기능 (개발용)

--- a/pages/landing.html
+++ b/pages/landing.html
@@ -23,6 +23,9 @@
 
     <link rel="stylesheet" type="text/css" href="../style/style.css">
     <link rel="stylesheet" type="text/css" href="../style/landing.css">
+
+    <script src="../scripts/script.js"></script>
+
 </head>
 
 <body id="page-body">
@@ -35,8 +38,8 @@
 
     <div class="landing-background">
         <h1>Welcome To Our Dream!</h1>
-        <button>회원가입</button>
-        <button>로그인</button>
+        <button onclick="registerFromLandingPage()">회원가입</button>
+        <button onclick="loginFromLandingPage()">로그인</button>
         <button onclick="skipLogin()">SKIP LOG IN</button>
     </div>
 </body>
