post read write

--- a/index.html
+++ b/index.html
@@ -20,7 +20,16 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>    
     <script src="scripts/init.js"></script>
-    <script src="scripts/script.js"></script>
+    <script src="scripts/script.js" type="module"></script>
+
+    <script src="scripts/pages/login.js" type="module"></script>
+    <script src="scripts/pages/lostaccount.js" type="module"></script>
+    <script src="scripts/pages/myprofile.js" type="module"></script>
+    <script src="scripts/pages/newsfeed.js" type="module"></script>
+    <script src="scripts/pages/register.js" type="module"></script>
+    <script src="scripts/pages/userprofile.js" type="module"></script>
+    <script src="scripts/pages/viewpost.js" type="module"></script>
+    <script src="scripts/pages/writepost.js" type="module"></script>
 
 </head>
 
@@ -46,7 +55,6 @@
             <button onclick="loadWritePost()">WRITE POST</button>
             <button onclick="hideDevButtons()">HIDE BUTTONS</button>
             <button onclick="loadLandingPage()">GO TO LANDING PAGE</button>
-            <button onclick="addTestPost()">ADD TEST POST</button>
         </div>
 
         <!-- TEMP - 개발용 임시 버튼입니다. -->
