--- a/pages/landing.html
+++ b/pages/landing.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" type="text/css" href="../style/style.css">
     <link rel="stylesheet" type="text/css" href="../style/landing.css">
 
-    <script src="../scripts/script.js"></script>
+    <script src="../scripts/script.js" type="module"></script>
 
 </head>
 
