--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <button onclick="loadMyProfile()">MY PROFILE</button>
             <button onclick="loadRegister()">REGISTER</button>
             <button onclick="loadUserProfile()">OTHER USER's PROFILE</button>
-            <button onclick="loadViewPost()">VIEW POST</button>
+            <button onclick="loadViewPost('6Xrupp27DH1ZdeVDb3Ek')">VIEW POST</button>
             <button onclick="loadWritePost()">WRITE POST</button>
             <button onclick="hideDevButtons()">HIDE BUTTONS</button>
             <button onclick="loadLandingPage()">GO TO LANDING PAGE</button>
