--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             <button onclick="loadWritePost()">WRITE POST</button>
             <button onclick="hideDevButtons()">HIDE BUTTONS</button>
             <button onclick="loadLandingPage()">GO TO LANDING PAGE</button>
+            <button onclick="logout()">LOG OUT</button>
         </div>
 
         <!-- TEMP - 개발용 임시 버튼입니다. -->
