--- a/pages/landing.html
+++ b/pages/landing.html
@@ -36,9 +36,20 @@
     <!-- 배경 동영상 태그 -->
 
     <div class="landing-background">
-        <h1>Welcome To Our Dream!</h1>
-        <button onclick="registerFromLandingPage()">회원가입</button>
-        <button onclick="loginFromLandingPage()">로그인</button>
-        <button onclick="skipLogin()">SKIP LOG IN</button>
+        <div id="workarea">
+            <div class="position">
+                <div class="buttons">
+                    <h1>Welcome To Our Dream!</h1><br>
+                    <button class="btn-hover color-1" onclick="registerFromLandingPage()">회원가입</button>
+                    <button class="btn-hover color-1" onclick="loginFromLandingPage()">로그인</button>
+                    <br>
+
+        <a onclick="skipLogin()">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            SKIP LOGIN
+        </a>
     </div>
 </body>
