--- a/pages/landing.html
+++ b/pages/landing.html
@@ -28,7 +28,7 @@
 
 </head>
 
-<body id="page-body">
+<body id="page-body-landing">
     <video id="videobcg" preload="auto" autoplay="true" loop="loop" muted="muted" volume="0">
         <source src="https://tistory4.daumcdn.net/tistory/4359959/skin/images/bg.mp4" type="video/mp4">
         <source src="movie.webm" type="video/webm">
