--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 </head>
 
-<body id="page-body">
+<body class="page-body" id="page-body">
     <div id="root"></div>
     <script src="scripts/main.js" type="module"></script>
     
