--- a/pages/landing.html
+++ b/pages/landing.html
@@ -53,7 +53,7 @@
                 <div class="buttons">
                     
                     <button class="btn-hover color-1" onclick="loginFromLandingPage()">LOGIN</button>
-                    <button class="btn-hover color-1" onclick="skipLogin()">SKIP LOGIN</button>
+                    <button class="btn-hover color-1" onclick="lostAccountFromLandingPage()">LOST ACCOUNT</button>
                     <br>
                 </div>
             </div>
