--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" type="text/css" href="style/style.css">
+    <link rel="stylesheet" type="text/css" href="style/editpost.css">
     <link rel="stylesheet" type="text/css" href="style/login.css">
     <link rel="stylesheet" type="text/css" href="style/lostaccount.css">
     <link rel="stylesheet" type="text/css" href="style/myprofile.css">
@@ -22,6 +23,7 @@
     <script src="scripts/init.js"></script>
     <script src="scripts/script.js" type="module"></script>
 
+    <script src="scripts/pages/editpost.js" type="module"></script>
     <script src="scripts/pages/login.js" type="module"></script>
     <script src="scripts/pages/lostaccount.js" type="module"></script>
     <script src="scripts/pages/myprofile.js" type="module"></script>
