--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <button onclick="loadLostAccount()">LOST ACCOUNT</button>
             <button onclick="loadMyProfile()">MY PROFILE</button>
             <button onclick="loadRegister()">REGISTER</button>
-            <button onclick="loadUserProfile()">OTHER USER's PROFILE</button>
+            <button onclick="loadUserProfile('2p70swzhsCReOAHz8abiDcuelR62')">OTHER USER's PROFILE</button>
             <button onclick="loadViewPost('6Xrupp27DH1ZdeVDb3Ek')">VIEW POST</button>
             <button onclick="loadWritePost()">WRITE POST</button>
             <button onclick="hideDevButtons()">HIDE BUTTONS</button>
