--- a/pages/landing.html
+++ b/pages/landing.html
@@ -40,7 +40,7 @@
         
         <div id="workarea">
             <div class="position">
-                <h1>Welcome To Our Dream!</h1><br>
+                <font color="white"><h1>Welcome To Our Dream!</h1></font><br>
                 <a onclick="registerFromLandingPage()">
                     <span></span>
                     <span></span>
