--- a/pages/landing.html
+++ b/pages/landing.html
@@ -41,7 +41,7 @@
         <div id="workarea">
             <div class="position">
                 <font color="white"><h1>Welcome To Our Dream!</h1></font><br>
-                <a onclick="registerFromLandingPage()">
+                <a onclick="checkHash('#registerFromLandingPage')">
                     <span></span>
                     <span></span>
                     <span></span>
@@ -52,8 +52,8 @@
 
                 <div class="buttons">
                     
-                    <button class="btn-hover color-1" onclick="loginFromLandingPage()">LOGIN</button>
-                    <button class="btn-hover color-1" onclick="lostAccountFromLandingPage()">LOST ACCOUNT</button>
+                    <button class="btn-hover color-1" onclick="checkHash('#loginFromLandingPage')">LOGIN</button>
+                    <button class="btn-hover color-1" onclick="checkHash('#lostAccountFromLandingPage')">LOST ACCOUNT</button>
                     <br>
                 </div>
             </div>
