개발용 버튼 삭제

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         <!-- TEMP - 개발용 임시 버튼입니다. -->
 
-        <div id="devbuttons">
+        <!-- <div id="devbuttons">
             <h3>DEVELOPERS ONLY</h3>
             <button onclick="checkHash('#loadNewsfeed')">NEWS FEED</button>
             <button onclick="checkHash('#loadLogin')">LOGIN</button>
@@ -58,7 +58,7 @@
             <button onclick="checkHash('#hideDevButtons')">HIDE BUTTONS</button>
             <button onclick="checkHash('#loadLandingPage')">GO TO LANDING PAGE</button>
             <button onclick="logOut()">LOG OUT</button>
-        </div>
+        </div> -->
 
         <!-- TEMP - 개발용 임시 버튼입니다. -->
 
