--- a/presentation/presentation.html
+++ b/presentation/presentation.html
@@ -6,13 +6,39 @@
 </head>
 <body>
     <header class="nav-bar">
-        <p>nav-bar</p>
+        <img class="infinity-logo" src="img/infinity-studios.png">
+        <h1 class="infinity-title">INFINITY Studios</h1>
+        <nav class="nav-actual">
+            <ul>
+                <li>INTRO</li>
+                <li>DEVLOG</li>
+                <li>CREW</li>
+            </ul>
+        </nav>
     </header>
+    <div class="nav-bar-dummy">
+        nav-bar-dummy
+    </div>
     <div class="wrap">
         <div class="content-wrap introduction-container">
-
+            intro
         </div>
-        <div class="conetnt-wrap pagelist-container"></div>
+        <div class="content-wrap devlog-1-container">
+            devlog-1
+        </div>
+        <div class="content-wrap devlog-2-container">
+            devlog-2
+        </div>
+        <div class="content-wrap devlog-3-container">
+            devlog-3
+        </div>
+        <div class="content-wrap ux-flow-container">
+            ux flow
+        </div>
+        <div class="content-wrap crew-container">
+            crew
+        </div>
+
     </div>
     <footer class="footer">
         <p>footer</p>
