--- a/presentation/presentation.html
+++ b/presentation/presentation.html
@@ -20,23 +20,35 @@
         nav-bar-dummy
     </div>
     <div class="wrap">
-        <div class="content-wrap introduction-container">
-            intro
+        <div class="content-wrap introduction-container">            
+            <div class="content-inner">
+                intro
+            </div>
         </div>
-        <div class="content-wrap devlog-1-container">
-            devlog-1
+        <div class="content-wrap devlog-1-container">            
+            <div class="content-inner">
+                devlog-1
+            </div>
         </div>
-        <div class="content-wrap devlog-2-container">
-            devlog-2
+        <div class="content-wrap devlog-2-container">            
+            <div class="content-inner">
+                devlog-2
+            </div>
         </div>
-        <div class="content-wrap devlog-3-container">
-            devlog-3
+        <div class="content-wrap devlog-3-container">            
+            <div class="content-inner">
+                devlog-3
+            </div>
         </div>
-        <div class="content-wrap ux-flow-container">
-            ux flow
+        <div class="content-wrap ux-flow-container">            
+            <div class="content-inner">
+                ux flow
+            </div>
         </div>
         <div class="content-wrap crew-container">
-            crew
+            <div class="content-inner">
+                crew
+            </div>
         </div>
 
     </div>
