--- a/presentation/presentation.html
+++ b/presentation/presentation.html
@@ -3,16 +3,21 @@
 
     <link rel="stylesheet" type="text/css" href="style/presentation.css">
     <script src="scripts/presentation.js"></script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@300&display=swap" rel="stylesheet">
+    
 </head>
 <body>
     <header class="nav-bar">
         <img class="infinity-logo" src="img/infinity-studios.png">
         <h1 class="infinity-title">INFINITY Studios</h1>
         <nav class="nav-actual">
-            <ul>
-                <li>INTRO</li>
-                <li>DEVLOG</li>
-                <li>CREW</li>
+            <ul class="nav-ul">
+                <li><button>INTRO</button></li>
+                <li><button>DEVLOG</button></li>
+                <li><button>CREW</button></li>
             </ul>
         </nav>
     </header>
@@ -21,32 +26,39 @@
     </div>
     <div class="wrap">
         <div class="content-wrap introduction-container">            
-            <div class="content-inner">
-                intro
+            <div class="content-inner introduction-content-inner">
+                <div class="introduction-left">
+                    <h1 class="kwangya-title">광야에 오신 것을 환영합니다.</h1>
+                    <p class="kwangya-text">여러분을 광야로 초대합니다.</p>
+                    <button class="kwangya-button">SEE MORE</button>
+                </div>
+                <div class="introduction-right">
+                    <iframe class="website-demo" scrolling="no" src="../index.html"></iframe>
+                </div>
             </div>
         </div>
         <div class="content-wrap devlog-1-container">            
-            <div class="content-inner">
+            <div class="content-inner devlog-1-content-inner">
                 devlog-1
             </div>
         </div>
         <div class="content-wrap devlog-2-container">            
-            <div class="content-inner">
+            <div class="content-inner devlog-2-content-inner">
                 devlog-2
             </div>
         </div>
         <div class="content-wrap devlog-3-container">            
-            <div class="content-inner">
+            <div class="content-inner devlog-3-content-inner">
                 devlog-3
             </div>
         </div>
         <div class="content-wrap ux-flow-container">            
-            <div class="content-inner">
+            <div class="content-inner ux-flow-content-inner">
                 ux flow
             </div>
         </div>
         <div class="content-wrap crew-container">
-            <div class="content-inner">
+            <div class="content-inner crew-content-inner">
                 crew
             </div>
         </div>
