--- a/presentation/presentation.html
+++ b/presentation/presentation.html
@@ -39,7 +39,12 @@
         </div>
         <div class="content-wrap devlog-1-container">            
             <div class="content-inner devlog-1-content-inner">
-                devlog-1
+                <div class="devlog-1-left">
+                    
+                </div>
+                <div class="devlog-1-right">
+
+                </div>
             </div>
         </div>
         <div class="content-wrap devlog-2-container">            
