--- a/presentation/presentation.html
+++ b/presentation/presentation.html
@@ -27,49 +27,105 @@
     <div class="wrap">
         <div class="content-wrap introduction-container">            
             <div class="content-inner introduction-content-inner">
-                <div class="introduction-left">
-                    <h1 class="kwangya-title">광야에 오신 것을 환영합니다.</h1>
-                    <p class="kwangya-text">여러분을 광야로 초대합니다.</p>
-                    <button class="kwangya-button">SEE MORE</button>
+                <div class="content-left introduction-left flex-column-left">
+                    <h1 class="content-title kwangya-title">광야에 오신 것을 환영합니다.</h1>
+                    <p class="content-text kwangya-text">여러분을 광야로 초대합니다.</p>
+                    <button class="content-button kwangya-button">SEE MORE</button>
                 </div>
-                <div class="introduction-right">
-                    <iframe class="website-demo" scrolling="no" src="../index.html"></iframe>
+                <div class="content-right introduction-right">
+                    <iframe class="main-content website-demo" scrolling="no" src="../index.html"></iframe>
                 </div>
             </div>
         </div>
         <div class="content-wrap devlog-1-container">            
             <div class="content-inner devlog-1-content-inner">
-                <div class="devlog-1-left">
-                    
+                <div class="content-left devlog-1-left">
+                    <iframe class="main-content github-repo" src="https://themrsung.github.io/crud-project"></iframe>
                 </div>
-                <div class="devlog-1-right">
+                <div class="content-right devlog-1-right flex-column-right">
+                    <h1 class="content-title devlog-1-title">저희는 개발을 합니다.</h1>
+                    <p class="content-text devlog-1-text">그렇다고 합니다.</p>
+                    <button class="content-button devlog-1-button">SEE MORE</button>
 
                 </div>
             </div>
         </div>
-        <div class="content-wrap devlog-2-container">            
+        <div class="content-wrap devlog-2-container">
             <div class="content-inner devlog-2-content-inner">
-                devlog-2
+                <div class="content-left devlog-2-left flex-column-left">
+                    <h1 class="content-title devlog-2-title">제목</h1>
+                    <p class="content-text devlog-2-text">내용</p>
+                    <button class="content-button devlog-2-button">SEE MORE</button>
+                </div>
+                <div class="content-right devlog-2-right">
+                    something
+                </div>
             </div>
         </div>
         <div class="content-wrap devlog-3-container">            
             <div class="content-inner devlog-3-content-inner">
-                devlog-3
+                <div class="content-left devlog-3-left">
+                    something
+                </div>
+                <div class="content-right devlog-3-right flex-column-right">
+                    <h1 class="content-title devlog-3-title">제목</h1>
+                    <p class="content-text devlog-3-text">내용</p>
+                    <button class="content-button devlog-3-button">SEE MORE</button>
+                </div>
             </div>
         </div>
         <div class="content-wrap ux-flow-container">            
             <div class="content-inner ux-flow-content-inner">
-                ux flow
+                <div class="content-inner ux-flow-content-inner">
+                    <div class="content-left ux-flow-left flex-column-left">
+                        <h1 class="content-title ux-flow-title">제목</h1>
+                        <p class="content-text ux-flow-text">내용</p>
+                        <button class="content-button ux-flow-button">SEE MORE</button>
+                    </div>
+                    <div class="content-right ux-flow-right">
+                        something
+                    </div>
+                </div>
             </div>
         </div>
         <div class="content-wrap crew-container">
             <div class="content-inner crew-content-inner">
-                crew
+                <div class="content-left crew-left">
+                    <div class="main-content crew-github-cards flex-column-left">
+                        <div class="crew-card">
+                            <div class="github-card" data-github="themrsung" data-theme="default"></div>
+                        </div>
+                        <div class="crew-card">
+                            <div class="github-card" data-github="freesian12" data-theme="default"></div>
+                        </div>
+                        <div class="crew-card">
+                            <div class="github-card" data-github="sinra" data-theme="default"></div>
+                        </div>
+                        <div class="crew-card">
+                            <div class="github-card" data-github="coachkim" data-theme="default"></div>
+                        </div>
+                        <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
+                    </div>
+                </div>
+                <div class="content-right crew-right flex-column-right">
+                    <h1 class="content-title crew-title">저희를 소개합니다.</h1>
+                    <p class="content-text crew-text">최선을 다해 프로젝트에 참여해주신 팀원들입니다.</p>
+                    <button class="content-button crew-button">SEE MORE</button>
+                </div>
             </div>
         </div>
-
+        <div class="content-wrap thank-you-container">            
+            <div class="content-inner thank-you-content-inner">
+                <div class="content-inner thank-you-content-inner">
+                    <div class="content-left thank-you-left flex-column-left">
+                        <h1 class="content-title thank-you-title">제목</h1>
+                        <p class="content-text thank-you-text">내용</p>
+                    </div>
+                    <div class="content-right thank-you-right">
+                        something
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <footer class="footer">
-        <p>footer</p>
-    </footer>
 </body>
