--- a/presentation/presentation.html
+++ b/presentation/presentation.html
@@ -175,7 +175,28 @@
                                     </ul>
                                 </li>
                                 <li>
-                                    <div class="repo-file">landing.html</div>
+                                    <div class="repo-file">firebase.js</div>
+                                </li>
+                                <li>
+                                    <div class="repo-file">goToLandingPage.js</div>
+                                </li>
+                                <li>
+                                    <div class="repo-file">htmlSecurity.js</div>
+                                </li>
+                                <li>
+                                    <div class="repo-file">init.js</div>
+                                </li>
+                                <li>
+                                    <div class="repo-file">main.js</div>
+                                </li>
+                                <li>
+                                    <div class="repo-file">profileLoader.js</div>
+                                </li>
+                                <li>
+                                    <div class="repo-file">script.js</div>
+                                </li>
+                                <li>
+                                    <div class="repo-file">userService.js</div>
                                 </li>
                             </ul>
                         </li>
